# github-actions-tag-2-sha

./: CLAUDE.md  README.md  action.yml  pyproject.toml
.github/workflows/: example-caller.yml  test-action.yml  update-actions.yml
tag2sha/: __init__.py  cli.py
