[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "tag2sha"
version = "0.1.0"
description = "Convert GitHub Actions tags to SHA references"
readme = "README.md"
authors = [
    {name = "Dustin Whited, email = "dgwhited@gmail.com}
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "semver>=2.13.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/yourusername/github-actions-tag-2-sha"

[project.scripts]
tag2sha = "tag2sha.cli:main" 